--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js')
-    script(type='text/javascript, src='http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js')
-    script(type='text/javascript , src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js')
+
+    script(type='text/javascript' , src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js')
+    script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js')
+
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
