--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,16 @@ a {
 .bf-width {
   width: 600px;
 }
+
+#document-content {
+
+}
+
+.document-modal {
+  /*position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;*/
+  display: none;
+}
