--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css')
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js')
     //- link(rel='stylesheet', href='/stylesheets/zen-form.css')
 
     script(type='text/javascript' , src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js')
+    script(type='text/javascript', src='//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js')
     //- script(type='text/javascript', src='/javascripts/zen-form.js')
 
 
